[gd_scene load_steps=5 format=3 uid="uid://b462uq44kj5cd"]

[ext_resource type="Script" path="res://src/project selector/project_selector.gd" id="1_x7ynn"]
[ext_resource type="PackedScene" uid="uid://dx7wvevknfnsf" path="res://src/icon button/icon_button.tscn" id="2_cvcnv"]
[ext_resource type="Texture2D" uid="uid://csm47flc0nfev" path="res://folder-svgrepo-com.svg" id="3_hnq0q"]
[ext_resource type="Texture2D" uid="uid://cw1uiy3m8qc36" path="res://folder-plus-svgrepo-com.svg" id="4_wpngu"]

[node name="project_selector" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7ynn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="button_cont" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="controls" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="select_folder" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls" instance=ExtResource("2_cvcnv")]
layout_mode = 2

[node name="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/select_folder" index="0"]
texture = ExtResource("3_hnq0q")

[node name="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/select_folder" index="1"]
text = "Select Folder"

[node name="new_project" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls" instance=ExtResource("2_cvcnv")]
layout_mode = 2

[node name="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/new_project" index="0"]
texture = ExtResource("4_wpngu")

[node name="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/new_project" index="1"]
text = "New Project"

[node name="icon_button3" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls" instance=ExtResource("2_cvcnv")]
visible = false
layout_mode = 2

[node name="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/icon_button3" index="1"]
text = "Remove project"

[node name="icon_button4" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls" instance=ExtResource("2_cvcnv")]
visible = false
layout_mode = 2

[node name="close" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls"]
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Manually select project"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="button_cont" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[node name="double_click_time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="proj_select" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2
access = 2

[node name="extracted_select" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2
access = 2

[node name="fix_path" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2
access = 2

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/select_folder" to="." method="_on_select_folder_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/new_project" to="." method="_on_new_project_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/close" to="." method="_on_close_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_up"]
[connection signal="dir_selected" from="proj_select" to="." method="_on_proj_select_dir_selected"]
[connection signal="dir_selected" from="extracted_select" to="." method="_on_extracted_select_dir_selected"]
[connection signal="dir_selected" from="fix_path" to="." method="_on_fix_path_dir_selected"]

[editable path="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/select_folder"]
[editable path="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/new_project"]
[editable path="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/icon_button3"]
[editable path="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/controls/icon_button4"]
